--- a/.github/workflows/immortalwrt-24.10-mtk-sdk.yml
+++ b/.github/workflows/immortalwrt-24.10-mtk-sdk.yml
@@ -1,4 +1,4 @@
-name: Build ImmortalWRT Firmware
+name: Build ImmortalWRT 24.10 Custom Firmware
 
 on:
   workflow_dispatch:
@@ -41,7 +41,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get -y install build-essential clang flex bison g++ gawk gcc-multilib g++-multilib \
-          gettext git libncurses-dev libssl-dev python3-distutils rsync unzip zlib1g-dev file wget
+          gettext git libncurses-dev libssl-dev python3-distutils rsync unzip zlib1g-dev file wget mold
 
       - name: Update & Install Feeds
         run: |
@@ -101,7 +101,7 @@ jobs:
       - name: Create a release
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          repo_token: "${{ secrets.Github }}"
           prerelease: True
           title: "${{ env.RelTag }}"
           automatic_release_tag: "${{ env.BUILDINFO }}"
