--- a/.github/workflows/openwrt-build.yml
+++ b/.github/workflows/openwrt-build.yml
@@ -1,4 +1,4 @@
-name: OpenWrt Custom GL.Inet GL-MT6000 (Flint 2) Release
+name: OpenWrt SNAPSHOT Custom Release
 
 permissions:
   contents: write
@@ -11,7 +11,7 @@ on:
 
 env:
   REPO_URL: https://github.com/pesa1234/openwrt.git
-  REPO_BRANCH: next-r4.5.36.rss.mtk
+  REPO_BRANCH: next-r4.6.0.rss.mtk
   OpenWRTDevice: Flint2_GL-MT6000
   CONFIG_FILE: config.openwrt-custom-master
   TZ: Europe/Kyiv
@@ -29,9 +29,16 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
-        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
-        sudo apt-get clean
+        sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
+        sudo -E apt-get -qq update
+        sudo -E apt-get -qq install $(curl -fsSL git.io/depends-ubuntu-2004)
+        sudo -E apt-get -qq autoremove --purge
+        sudo -E apt-get -qq clean
+        sudo timedatectl set-timezone "$TZ"
+        sudo mkdir -p /workdir
+        sudo chown $USER:$GROUPS /workdir
         df -h
+
 
 
     - name: Set up OpenWrt Environment
@@ -64,7 +71,8 @@ jobs:
           wget \
           llvm \
           libpcre3 \
-          libpcre3-dev
+          libpcre3-dev \
+          mold
 
     - name: Display contents of .config start
       run:  |
@@ -129,7 +137,7 @@ jobs:
     - name: Create a release
       uses: "marvinpinto/action-automatic-releases@latest"
       with:
-        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        repo_token: "${{ secrets.Github }}"
         prerelease: True
         title: "${{ env.RelTag }}"
         automatic_release_tag: "${{ env.BUILDINFO }}"
