--- a/.github/workflows/immortalwrt-24.10-mtk-sdk.yml
+++ b/.github/workflows/immortalwrt-24.10-mtk-sdk.yml
@@ -42,6 +42,8 @@ jobs:
 
       - name: Setup Build Environment
         run: |
+          sudo add-apt-repository universe
+          sudo add-apt-repository multiverse
           sudo apt-get update
           sudo apt-get install -y \
             build-essential \
