--- a/.github/workflows/openwrt-build.yml
+++ b/.github/workflows/openwrt-build.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   REPO_URL: https://github.com/pesa1234/openwrt.git
-  REPO_BRANCH: next-r4.6.0.rss.mtk
+  REPO_BRANCH: next-r4.6.1.rss.mtk
   OpenWRTDevice: Flint2_GL-MT6000
   CONFIG_FILE: config.openwrt-custom-master
   TZ: Europe/Kyiv
@@ -141,7 +141,7 @@ jobs:
       - name: Deploy and archive packages
         run: |
           ls openwrt/bin/*/targets/*/*
-          cd openwrt/bin/*/targets/*/*
+          cd openwrt/bin/*_${REPO_BRANCH}/targets/mediatek/filogic
 
           if [ -d "packages" ]; then
             echo "Found packages directory, processing..."
@@ -193,7 +193,7 @@ jobs:
             fi
 
             # Create archive
-            cd openwrt/bin/targets/*/*
+            cd openwrt/bin/*_${REPO_BRANCH}/targets/mediatek/filogic
             TIMESTAMP=$(date +%Y%m%d_%H%M%S)
             PACKAGES_ARCHIVE="openwrt-packages-${TIMESTAMP}-v${OpenWRT_VERSION}-k${KERNEL_VERSION}.tar.gz"
             tar -czf "$PACKAGES_ARCHIVE" packages/
@@ -213,7 +213,7 @@ jobs:
       - name: Organize files
         id: organize
         run: |
-          cd openwrt/bin/targets/*/*
+          cd openwrt/bin/*_${REPO_BRANCH}/targets/mediatek/filogic
           rm -rf packages
           echo "FIRMWARE=$PWD" >> $GITHUB_ENV
           echo "NOW=$(date +%F-%H%M)" >> $GITHUB_ENV
