--- a/.github/workflows/immortalwrt-24.10-mtk-sdk.yml
+++ b/.github/workflows/immortalwrt-24.10-mtk-sdk.yml
@@ -21,6 +21,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@main
+        with:
+          fetch-depth: 0  # Get full history instead of single commit
+          ref: ${{ github.ref }}
 
       - name: Free up disk space
         env:
@@ -145,6 +148,7 @@ jobs:
           if [ -d "packages" ]; then
             echo "Found packages directory, processing..."
 
+            TIMESTAMP=$(date +%Y%m%d_%H%M%S)
             PACKAGE_COUNT=$(find packages -name "*.ipk" | wc -l)
             echo "Found $PACKAGE_COUNT .ipk packages"
 
@@ -154,7 +158,7 @@ jobs:
             cd $GITHUB_WORKSPACE
 
             # Create versioned directory name
-            PACKAGES_DIR_NAME="packages-output-immortalwrt-${IMMORTALWRT_VERSION}-kernel-${KERNEL_VERSION}"
+            PACKAGES_DIR_NAME="packages-output-${TIMESTAMP}-immortalwrt-${IMMORTALWRT_VERSION}-kernel-${KERNEL_VERSION}"
 
             rm -rf packages-output*
             cp -r immortalwrt-mt798x-24.10/bin/targets/*/*/packages "$PACKAGES_DIR_NAME"
@@ -179,6 +183,8 @@ jobs:
               PKG_SIZE=$(du -h "$pkg" | cut -f1)
               echo "- $PKG_NAME ($PKG_SIZE)" >> "$PACKAGES_DIR_NAME/README.md"
             done
+
+            git pull origin ${{ github.ref_name }} --rebase --autostash
 
             git add "$PACKAGES_DIR_NAME/"
             git add packages-output
