--- a/.github/workflows/openwrt-build.yml
+++ b/.github/workflows/openwrt-build.yml
@@ -24,6 +24,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@main
+        with:
+          fetch-depth: 0  # Get full history instead of single commit
+          ref: ${{ github.ref }}
 
       - name: Free up disk space
         env:
@@ -85,6 +88,7 @@ jobs:
 
       - name: Configure Firmware
         run: |
+          cp 903-fix-nft-reject-bridge.patch immortalwrt-mt798x-24.10/target/linux/generic/backport-5.4
           cp $CONFIG_FILE openwrt/.config
           cd openwrt
           perl --version
@@ -147,6 +151,7 @@ jobs:
           if [ -d "packages" ]; then
             echo "Found packages directory, processing..."
 
+            TIMESTAMP=$(date +%Y%m%d_%H%M%S)
             PACKAGE_COUNT=$(find packages -name "*.ipk" | wc -l)
             echo "Found $PACKAGE_COUNT .ipk packages"
 
@@ -156,7 +161,7 @@ jobs:
             cd $GITHUB_WORKSPACE
 
             # Create versioned directory name
-            PACKAGES_DIR_NAME="packages-output-openwrt-${OpenWRT_VERSION}-kernel-${KERNEL_VERSION}"
+            PACKAGES_DIR_NAME="packages-${TIMESTAMP}-output-openwrt-${OpenWRT_VERSION}-kernel-${KERNEL_VERSION}"
 
             rm -rf packages-output*
             cp -r openwrt/bin/targets/*/*/packages "$PACKAGES_DIR_NAME"
@@ -181,6 +186,8 @@ jobs:
               PKG_SIZE=$(du -h "$pkg" | cut -f1)
               echo "- $PKG_NAME ($PKG_SIZE)" >> "$PACKAGES_DIR_NAME/README.md"
             done
+
+            git pull origin ${{ github.ref_name }} --rebase --autostash
 
             git add "$PACKAGES_DIR_NAME/"
             git add packages-output
