--- a/.github/workflows/test-immortalwrt-24.10-mtk-sdk.yml
+++ b/.github/workflows/test-immortalwrt-24.10-mtk-sdk.yml
@@ -93,7 +93,7 @@ jobs:
           cat target/linux/mediatek/Makefile | grep KERNEL
           head -n 200 scripts/kconfig.pl
           make defconfig
-          cat immortalwrt-mt798x-24.10/.config
+          cat .config
 
       - name: Extract Version Information
         run: |
