--- a/.github/workflows/immortalwrt-24.10-mt_wifi.yml
+++ b/.github/workflows/immortalwrt-24.10-mt_wifi.yml
@@ -152,6 +152,11 @@ jobs:
           sed -i "s|echo '\$(if \$(filter m,\$(CONFIG_FEED_\$(feed))),# )%U/packages/%A/\$(feed)/packages.adb';|echo '\$(if \$(filter m,\$(CONFIG_FEED_\$(feed))),# )\${OWRT_APK_LINK}/%A/\$(feed)/packages.adb';|" include/feeds.mk
           echo "feeds.mk patched successfully"
 
+      - name: Try to fix WAN
+        run:
+          cd immortalwrt-mt798x-24.10
+          sed -i '/label = "wan";/d' target/linux/mediatek/files-5.4/arch/arm64/boot/dts/mediatek/mt7986a-glinet-gl-mt6000.dts
+
       - name: Configure Firmware
         run: |
           cp 903-fix-nft-reject-bridge.patch immortalwrt-mt798x-24.10/target/linux/generic/backport-5.4
